AVS 353 go live

--- a/AVS353/REPRO.HTM
+++ b/AVS353/REPRO.HTM
@@ -2,14 +2,21 @@
 <HTML>
 <HEAD> 
 <TITLE>AVS 353 Equine Reproduction and Breeding Management</TITLE>
+<style>
+h1 { font-size:35px;}
+body {
+color:black;	  font-size:25px;
+}
+a {
+	  color: DarkMagenta;
+}
+</style>
 </HEAD>
-<BODY bgcolor=white>
-<TITLE>AVS 353 Equine Reproduction and Breeding Management</TITLE>
-</HEAD>
-<BODY BGCOLOR=WHITE>
+<BODY bgcolor=GainsBoro>
 <H3><Center>AVS 353 Equine Reproduction and Breeding Management<BR>
-Robert C. Causey DVM, PhD, Dip ACT</H3><BR>
-Phone 207-922-7475 or E-Mail rcausey@maine.edu </Center></P>
+		Robert C. Causey DVM, PhD, Dip ACT</H3></Center><P>
+<B> Contact Information</B><P>
+<Blockquote>Phone 207-922-7475 or E-Mail rcausey@maine.edu</Blockquote>
 </P>
 <B>Course Objectives:</P></B>
 <Blockquote>
@@ -35,10 +42,9 @@ Attendance and class participation =30%</P>
 <B>Reference Material:</P>
 </B>
 <Blockquote>Class notes will be provided by the instructor on the web.</P>
-<B></P>
-</B>No text is required for this class.<P>
-A video archive of lectures and videos may be accessed <A HREF=video_archive_AVS353.htm>here</A>
-</Blockquote></P>
+</P>
+No text is required for this class.</Blockquote>
+<B>Video Archive</B></I><Blockquote>Videos of lectures may be accessed <A HREF=video_archive_AVS353.htm>here</A></Blockquote>
 <B>Course Policies:</B>
 <Blockquote>
 <P>
@@ -56,7 +62,7 @@ For support services on campus: Office of Sexual Assault & Violence Prevention: 
 <B></P>
  </P>
 </P>
-<h3><center>Syllabus</center></h3></P>
+<h2><center>Course Materials</center></h2></P>
 </P>
 <P>Review Quizzes</P>
 </B><P><Blockquote>A set of simple questions to test your knowledge of <A HREF=EQUEST.HTM>basic horse reproduction</A>.</P>
@@ -68,24 +74,25 @@ Quiz 5.  Detailed quiz of <A HREF=QUIZ5.HTM>drug use in equine reproduction.</A>
 <Blockquote>A translation from The History of Animals Book 6, part 22<P><A HREF=Aristotle_HA_VI_22.htm>click here</A></Blockquote>
 <P><B>Review of Mammalian Reproduction</B></P>
 </B><P><Blockquote>A description in simple terms of the basic events of reproduction in mammals<P><A HREF=BASEREP.HTM>click here for notes</A></Blockquote> <P><B>Reproductive Anatomy of the Mare</B></P>
-</B><P><Blockquote>A description of the arrangement of the reproductive organs of the mare, including ovaries, uterus, external genitalia, and nervous tissue. <P><A HREF=REPANAT.HTM>click here for notes</A></Blockquote>
+</B><P><Blockquote>A description of the arrangement of the reproductive organs of the mare, including ovaries, uterus, external genitalia, and nervous tissue. <P><A HREF=REPANAT.HTM>click here for notes</A><P><A HREF=reproductive_anatomy.pdf>Anatomy slides</A></Blockquote>
 <B>
 <P>Reproductive Seasonality of the Mare</P>
-</B><P><Blockquote>A description of reproductive seasonality, behavior, and basic endocrinology of the non cycling mare.</P><A HREF=REPSEAS.HTM>click here for notes</A></Blockquote>
+</B><P><Blockquote>A description of reproductive seasonality, behavior, and basic endocrinology of the non cycling mare.</P><A HREF=REPSEAS.HTM>click here for notes</A><P><A HREF=seasonality_estrous-cycle.pdf>Seasonality and estrous cycle slides</A></Blockquote>
  
 <P><B>Estrous Cycle of the Mare</P>
-</B><P><Blockquote>A description of follicular dynamics and hormonal events of the estrous cycle in the mare.</P><A HREF=ESTROUS.HTM>click here for notes</A></Blockquote>
+</B><P><Blockquote>A description of follicular dynamics and hormonal events of the estrous cycle in the mare.</P><A HREF=ESTROUS.HTM>click here for notes</A><P><A HREF=seasonality_estrous-cycle.pdf>Seasonality and estrous cycle slides</A></Blockquote>
  
 <B><P>Endocrinology of the Pregnant Mare</P>
-</B><P><Blockquote>Physiology early middle and late gestation. </P><A HREF=PREG.HTM>click here for notes</A></Blockquote>
+</B><P><Blockquote>Physiology early middle and late gestation. </P><A HREF=PREG.HTM>click here for notes</A><P><A HREF=endocrinology_prenancy_1.pdf>Endocrinology of pregnancy slides- part 1</A><P><A HREF=endocrinology_prenancy_2.pdf>Endocrinology of pregnancy slides- part 2</A></Blockquote>
  
 <B><P>Pregnancy and Foaling</P>
-</B><P><Blockquote>The events surrounding foaling and the foal's adjustment to the world.</P><A HREF=PREGFOL.HTM>Click here</A> and<A HREF=FOALING.HTM>here</A> for notes</A></Blockquote>
- 
+</B><P><Blockquote>The events surrounding foaling and the foal's adjustment to the world.</P><A HREF=PREGFOL.HTM>Click here</A> and<A HREF=FOALING.HTM>here</A> for notes</A><P><A HREF=placenta.pdf>Examination of placenta </A><P>
+Check out the video archive for foaling videos <A HREF=video_archive_AVS353.htm>here</A>
+ </Blockquote>
 <B>
 <P>The Stallion</P></B>
 <Blockquote>Reproductive anatomy, physiology and breeding soundness evaluation of the stallion<P>
-<A HREF=STUD.HTM>click here for notes</A></Blockquote>
+<A HREF=STUD.HTM>click here for notes</A><P><A HREF=stallion.pdf>Stallion slides</A></Blockquote>
 <B><P>Drug Use in Equine Reproduction</P>
 </B><P><Blockquote>The rationale behind various pharmacologic agents used in equine reproduction</P>
 <A HREF=DRUGS.HTM>click here for notes</A></Blockquote>
