--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC"-//W3C//DTD HTML 3.2 Final//EN">
 <HTML>
 <HEAD>
-<TITLE>Robert's home page</TITLE>
-<style>
+<TITLE>Video Archive</TITLE>
+<stye>
 h1 { font-size:35px;}
 body {
 color:black;	  font-size:25px;
@@ -14,12 +14,12 @@ a {
 </HEAD>
 <BODY bgcolor=GainsBoro>
 <CENTER>
-	<H1>AVS353 Video Archive </H1><P>
+	<H1>AVS 353 Equine Reproduction <P>Video Archive </H1><P>
 </CENTER></H1>
 <B>Welcome!</B><BR>
-The purpose of this page is to maintain links to the videos of lectures and subjects for this class. The videos are loosely grouped according to subject.<p>
+The purpose of this page is to provide links to videos of lectures and  movies used in class. The videos are grouped according to subject. Lecture videos are labelled by date of the lecture.<p>
 <B>Aristotle and Equine Reproduction</B><BR>
-<A HREF=https://video.maine.edu/media/2021-01-27_AVS+353+Equine+Reproduction_Intro+and+Aristotle/1_cxtk69y7>2021-01-27 Lecture</A> on Aristotle's treatise on equine reproduction<p>
+<A HREF=https://video.maine.edu/media/2021-01-27_AVS+353+Equine+Reproduction_Intro+and+Aristotle/1_cxtk69y7>2021-01-27 Lecture</A> in which we grade Aristotle on his knowledge of equine reproduction<p>
 <p>
 <B>Basic Mammalian Reproduction</B><BR>
 <p>
@@ -32,7 +32,14 @@ The purpose of this page is to maintain links to the videos of lectures and subj
 <B>Endocrinology of Pregnancy</B><BR>
 <P>
 <B>Pregnancy and Foaling</B><br>
-<p>
+<p><Blockquote>
+<A HREF=https://video.maine.edu/media/AVS353_0054_11monthsofintrauterineactivity_video-2020-04-15/1_bwtegdyq>Click here</A> to see a video by Dr Ginther on movements of the fetus during pregnancy. (This video is copyrighted and is shown here for students in AVS 353 at the University of Maine.)<p>
+<A HREF=https://video.maine.edu/media/Foaling+video/1_08o6762r>Click here</A> to see a good foaling video<p>
+<A HREF=https://video.maine.edu/media/Movingpoetry/1_iwl2xvm1>Click here</A> to see a foal born at night at the Witter Center<p>
+<A HREF=https://video.maine.edu/media/Foalingchase/1_5730kbre>Click here</A> to see an induced foaling at the Witter Center<p>
+
+
+</Blockquote>
 <B>The Stallion</B><br>
 <p>
 <B>Drug Use in Equine Reproduction</B><BR>
