Final format AVS303

--- a/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
+++ b/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
-	<head><style>                                                                  h1 { font-size:35px;}                                                    body {                                                                   color:black;      font-size:25px;                                        }                                                                        a {                                                                                color: DarkMagenta;                                            }                                                                        </style>                                                                 </HEAD>                                                                  <BODY bgcolor=GainsBoro> 
-		<center><H2> AVS 196/303 - Introduction to Equine Cooperative<br>Lecture Materials and Quizzes
+	<head>
+	<style>                                                                  
+	h1 { font-size:35px;}                                                    
+	body {color:black;font-size:25px;}
+	a {color: DarkMagenta;} 
+	</style>                                                          
+	</head>
+	<BODY bgcolor=GainsBoro>
+		<center><H2> Lecture Material and Quizzes - AVS 196/303</H2><H3>Introduction to Equine Cooperative<BR>Equine Management Cooperative</H3>
 			</H2></center>
 		<H3>Course Syllabus</H3><blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/002_SyllabusAVS303spring2021.pdf>Syllabus</A><p></blockquote>
 		<H3>First things to do and welcome to the Witter Center</H3><blockquote>
 			Hi everyone: Welcome to AVS 303! We very glad to have you. To begin, here are some "virtual chores" we need you to do. It is just some paperwork and documentation of various trainings in the links below.<p>
 In summary you will need to do the following (if you are taking the class remotely just do 2 and 3):<p>
-1. Fill out form with emergency contact information, release and assumption of risk agreement, helmet policy and riding protocols -first think you should do.<p>
+1. Fill out form with emergency contact information, release and assumption of risk agreement, helmet policy and riding protocols -first thing you should do.<p>
 2. On-line basic safety training -by February 1st 2021<p>
 3. On-line farm training - by February 1st 2021 <p>
 4. Horse handling training lab with Cassie Astle - second week of class<p>
@@ -17,7 +24,7 @@ In summary you will need to do the following (if you are taking the class remote
 			
 <A HREF=https://forms.gle/KbDZEwdoTM36or9C9>One link to </A><blockquote>Emergency Contact<BR>Release and Assumption of Risk<BR> Riding protocol<BR> Helmet policy<BR> Basic safety training certification<BR>Farm safety training certification</blockquote>
 <A HREF=https://video.maine.edu/media/How+to+do+basic+and+farm+online+safety+training/1_tvds6d8j>Video </A> to show how to do basic and farm safety training (this is a rather clunky video I did for folks in AVS 146)<p>
-<A HREF=https://mycampus.maine.edu/group/mycampus/safety-environmental-management>Link to</A> annual and basic safety training<p>
+<A HREF=https://mycampus.maine.edu/group/mycampus/safety-environmental-management>Link to</A> annual online basic and farm safety training<p>
 <!--
 <A HREF=>LINKTEXT</A><p>
 <A HREF=>LINKTEXT</A><p>
@@ -25,6 +32,10 @@ In summary you will need to do the following (if you are taking the class remote
 <A HREF=>LINKTEXT</A><p>
 -->
 		</blockquote>
+		<H3>Additional Course Resources</H3>
+			<blockquote>
+				<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/901_lecture_video_archive.htm>Recordings of lectures</A><P>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/902_farmlab_video_archive.htm>Videos of farm and lab material</A></blockquote>
 		<center><H2>Lecture Topics</H2></center>
 			<H3>Horse Identification </H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/034_Basic_Colors_Markings.pdf>Coat Color and Markings</A><p>
