--- a/AVS196_303/AVS303_Lecture_Material/901_Lecture_Video_Archive.htm
+++ b/AVS196_303/AVS303_Lecture_Material/901_Lecture_Video_Archive.htm
@@ -1,28 +1,33 @@
 
 <!DOCTYPE html>
 <html>
-	<head></head>
-	<body>
-		<center><H2> AVS303 Lecture Video Archive </H2></center>
-		<H3>Course Syllabus</H3><blockquote>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/SyllabusAVS303spring2021.pdf>Syllabus</A><p>
-		</blockquote>	<H3>Horse Identification </H3> <blockquote>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/036_coatcolorgenetics.pdf>Coat Color Genetics</A><p>
+	<head>
+	<style>                                                                  
+	h1 { font-size:35px;}                                                    
+	body {color:black;font-size:25px;}
+	a {color: DarkMagenta;} 
+	</style>                                                          
+	</head>
+	<BODY bgcolor=AntiqueWhite>
+	<center><H2> Lecture Video Archive - AVS 196/303</H2></center>
+	Welcome! This page provides all the videos associated with lecture topics in AVS 196/303. A separate page, the <A HREF=902_farmlab_video_archive.htm>Farm and Labs</A> video archive contains all the videos of "hands-on" activities in the horse barn, such as chore procedures, horse - labs etc. Lectures will be added as they are completed.
+		<H3>Horse Identification </H3> <blockquote>
+			<A HREF=https://video.maine.edu/media/2021_02_01_AVS196-303_Joint-Lecture_Coat-Color/1_okrz77ir>2021-02-01</A> A brief review of safety training and lecture on coat color and horse identification.<p>
 		</blockquote>	<H3>Physical Examination and Body Condition Scoring </H3> <blockquote>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/042_physical_exam2.pdf>Physical Exam Sheet</A><p>
-		</blockquote>	<H3>Digestion - Gut anatomy, nutrtion and feeding</H3> <blockquote>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/041_articles.extension.org-Nutrients.pdf>Nutrients</A><p>
+			<!--<A HREF=>Link text</A>--><p>
+		</blockquote>	<H3>Digestion - Gut anatomy, nutrition and feeding</H3> <blockquote>
+			<!--<A HREF=>Link text</A>--><p>
 		</blockquote>	<H3>Colic and Gut Parasites</H3> <blockquote>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/048_wormsandcolic.pdf>Brief Review Questions on Worms and Colic</A><p>
+			<!--<A HREF=>Link text</A>--><p>
 		</blockquote>	<H3>The Environment </H3> <blockquote>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/062_Hourly_Forecast.pdf>Sample Hourly Forecast</A><p>
+			<!--<A HREF=>Link text</A>--><p>
 		</blockquote>	<H3>Musculoskeletal System</H3> <blockquote>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/083_ligaments.tiff.pdf>Important ligaments of the horse</A><p>
+			<!--<A HREF=>Link text</A>--><p>
 		</blockquote>	<H3>Lameness</H3> <blockquote>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/086_bandaging_pptx_optimized.pdf>How to bandage the lower legs</A><p>
+			<!--<A HREF=>Link text</A>--><p>
 		</blockquote>	<H3>Infectious Diseases</H3> <blockquote>
-		</blockquote>	<H3>Self-Assessment</H3> <blockquote>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/200_skillsassessment.xlsx.pdf>Checklist of Skills you should accomplish.</A><p>
+			<!--<A HREF=>Link text</A>--><p> </blockquote>	<H3>Self-Assessment</H3> <blockquote>
+			<!--<A HREF=>Link text</A>--><p>
 		</blockquote>
 	</body>
 </html>
