--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>Video Archive</TITLE>
-<stye>
+<style>
 h1 { font-size:35px;}
 body {
 color:black;	  font-size:25px;
@@ -12,7 +12,7 @@ a {
 }
 </style>
 </HEAD>
-<BODY bgcolor=GainsBoro>
+<BODY bgcolor=AntiqueWhite>
 <CENTER>
 	<H1>AVS 353 Equine Reproduction <P>Video Archive </H1><P>
 </CENTER></H1>
@@ -21,7 +21,7 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <B>Aristotle and Equine Reproduction</B><BR>
 <A HREF=https://video.maine.edu/media/2021-01-27_AVS+353+Equine+Reproduction_Intro+and+Aristotle/1_cxtk69y7>2021-01-27 Lecture</A> in which we grade Aristotle on his knowledge of equine reproduction<p>
 <p>
-<B>Basic Mammalian Reproduction</B><BR>
+<B>Basic Mammalian Reproduction</B><BR><A HREF=https://video.maine.edu/media/2020-02-03_AVS+353_Lecture_Basic-Reproduction_hormones/1_q4p51qpt>2021-02-03 Lecture</A> in which we discuss basic mammalian reproduction and hormones<p>
 <p>
 <B>Reproductive Anatomy</B><BR> <p>
 <p>
