--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -21,7 +21,7 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <B>Aristotle and Equine Reproduction</B><BR>
 <A HREF=https://video.maine.edu/media/2021-01-27_AVS+353+Equine+Reproduction_Intro+and+Aristotle/1_cxtk69y7>2021-01-27 Lecture</A> in which we grade Aristotle on his knowledge of equine reproduction<p>
 <p>
-<B>Basic Mammalian Reproduction</B><BR><A HREF=https://video.maine.edu/media/2020-02-03_AVS+353_Lecture_Basic-Reproduction_hormones/1_q4p51qpt>2021-02-03 Lecture</A> in which we discuss basic mammalian reproduction and hormones<p><A HREF=https://video.maine.edu/media/2020-02-10_AVS+353_Lecture_Basic-Reproduction_hormones-2/1_5giftn5x>2021-02-10 Lecture</A> in which we focus on seasonality and production of gametes<p><A HREF=https://video.maine.edu/media/2020-02-17_AVS+353_Lecture_Basic-Reproduction_hormones-3/1_bqe74ldy>2021-02-17 Lecture</A> in which we complete basic repoduction, discussing fertilization and pregnancy<p>
+<B>Basic Mammalian Reproduction</B><BR><A HREF=https://video.maine.edu/media/2020-02-03_AVS+353_Lecture_Basic-Reproduction_hormones/1_q4p51qpt>2021-02-03 Lecture</A> in which we discuss basic mammalian reproduction and hormones<p><A HREF=https://video.maine.edu/media/2020-02-10_AVS+353_Lecture_Basic-Reproduction_hormones-2/1_5giftn5x>2021-02-10 Lecture</A> in which we focus on seasonality and production of gametes<p><A HREF=https://video.maine.edu/media/2020-02-17_AVS+353_Lecture_Basic-Reproduction_hormones-3/1_bqe74ldy>2021-02-17 Lecture</A> in which we complete basic repoduction, discussing fertilization pregnancy etc<p>
 <p>
 <B>Reproductive Anatomy</B><BR> <p>
 <p>
