--- a/AVS196_303/AVS303_Lecture_Material/902_farmlab_video_archive.htm
+++ b/AVS196_303/AVS303_Lecture_Material/902_farmlab_video_archive.htm
@@ -23,6 +23,25 @@
 <A HREF=https://video.maine.edu/media/10-In+for+the+night/1_uoee627z>10-Leaving the stall, door, halter</A><BR>
 <A HREF=https://video.maine.edu/media/11-Halter+on+and+going+out/1_v77ycmhf>11-Putting on halter and going out</A><BR>
 <A HREF=https://video.maine.edu/media/12-Release/1_5tpnrep9>12-Release into paddock</A><BR><p></blockquote>
+<H3>John Deere Training</H3><blockquote>
+Please review this official video from John Deere about safe operation of the Gator.<p>
+<blockquote>
+<A HREF=https://video.maine.edu/media/MY20+and+Older+John+Deere+Crossover+and+HPX+Gator+Utility+Vehicle+Safety+Video+%28English%29/1_m7g97g0m>John Deere safety video </A><p>
+</blockquote>
+Below are videos of all aspects of Gator training specific to the horse barn. The text description for each video contains a summary of the key points. Each video is about a minute long.<p>
+<blockquote>
+<A HREF=https://video.maine.edu/media/01_JohnDeere_Intro/1_xd0t3bj1>01-Introduction</A><br>
+<A HREF=https://video.maine.edu/media/02_JohnDeere-Vehicle+Controls/1_jkkgezlw>02-Vehicle Controls</A><br>
+<A HREF=https://video.maine.edu/media/03_JohnDeere-Fuel+gauge/1_xt17bg8h>03-Fuel</A><br>
+<A HREF=https://video.maine.edu/media/04_JohnDeere-How+to+start+it/1_ci7qx0gc>04-Starting her up</A><br>
+<A HREF=https://video.maine.edu/media/05_JohnDeere-How+to+open+the+door/1_hcc3noqu>05-How to open the door</A><br>
+<A HREF=https://video.maine.edu/media/06_JohnDeere-CLOSEDOOR%21/1_ji2wa7wq>06-Don't forget to close the door!</A><br>
+<A HREF=https://video.maine.edu/media/07_JohnDeere-How+to+fill/1_jt11sxia>07-Filling the water tank</A><br>
+<A HREF=https://video.maine.edu/media/08_JohnDeere_stowing+the+hose/1_xn5w1i5p>08-Stowing the hose</A><br>
+<A HREF=https://video.maine.edu/media/09_JohnDeere_Starting+on+a+hill/1_52k2pkf1>09-Starting on a hill</A><br>
+<A HREF=https://video.maine.edu/media/10_+JohnDeere_Parking/1_k6mucj3u>10-Parking</A><br>
+</blockquote>
+</blockquote>
  <H3>Horse Identification</H3><blockquote><A HREF=https://video.maine.edu/media/AVS303_0011_Get_to_know_the_horses/1_x155iiqg>Meet our horses</A><p><A HREF=https://video.maine.edu/media/AVS303-0012_DIVA/1_28dne9ar>and Diva!</A><p> <A HREF=https://video.maine.edu/media/AVS+146+Lab+4+Part+1/1_n1xn84x2>Horse ID, coat color, aging </A>(for AVS 146-part 1)<P><A HREF=https://youtu.be/qGJCbU0Ao04>Horse ID, coat color, aging </A>(for AVS 146 part 2)</A></blockquote>
  <H3>Grooming</H3><blockquote><A HREF=https://video.maine.edu/media/AVS303_0040-Grooming-1/1_0yf5nwwj>Grooming 1</A><p><A HREF=https://video.maine.edu/media/AVS303_0041-Grooming-2/1_y52mer37>Grooming 2</A><p></blockquote>
  <H3>Physical Exam and Body Condition</H3><blockquote><A HREF=xx>Coming soon to a horse near you!</A><p></blockquote>
