Up loading video links in AVS 303 and 353

--- a/AVS196_303/AVS303_Lecture_Material/901_lecture_video.htm
+++ b/AVS196_303/AVS303_Lecture_Material/901_lecture_video.htm
@@ -14,7 +14,7 @@
 		<H3>Horse Identification </H3> <blockquote>
 			<A HREF=https://video.maine.edu/media/2021_02_01_AVS196-303_Joint-Lecture_Coat-Color/1_okrz77ir>2021-02-01</A> A brief review of safety training and lecture on coat color and horse identification.<p>
 		</blockquote>	<H3>Physical Examination and Body Condition Scoring </H3> <blockquote>
-			<!--<A HREF=>Link text</A>--><p>
+			<A HREF=https://video.maine.edu/media/2021_03_01_AVS196-303_Joint-Lecture_Physical-Examination/1_2iirh16m>2021-03-01</A>A brief review of physical examination in the horse<p>
 		</blockquote>	<H3>Digestion - Gut anatomy, nutrition and feeding</H3> <blockquote>
 			<!--<A HREF=>Link text</A>--><p>
 		</blockquote>	<H3>Colic and Gut Parasites</H3> <blockquote>
