--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -25,7 +25,7 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <p>
 <B>Reproductive Anatomy</B><BR>
 <A HREF=https://video.maine.edu/media/2020-02-24_AVS+353_Lecture_Reproductive_Anatomy_1/1_egc4h0lk>2021-02-24</A> Reproductive Anatomy: Pineal gland, hypothalamus, pituitary, ovaries, uterus, follicle, CL etc.<p>
-<A HREF=PASTLINKHERE>2021-03-03</A> Reproductive Anatomy: Coming soon<p>
+<A HREF=https://video.maine.edu/media/2021-03-03_AVS+353_Lecture_Reproductive_Anatomy_2/1_kf39mrc5>2021-03-03</A> Reproductive Anatomy: Counter current exchange mechanism for systemic distribution of prostaglandin, uterine glands, myometrium, cervix, changes with cycle, etc. <p>
 <B>Reproductive Seasonality</B><BR> <p>
 <p>
 <B>Estrous Cycle</B><br>
