--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ a {
 </center>
 -->
 <H3>Resources for advisees</H3>
+If you are trying to reach me feel free to call or text at 207-922-7475. Email rcausey@maine.edu. To schedule as meeting please invite me using your google calendar.
 <blockquote>
 <p>
 <A HREF=advising/AVS396.pdf>AVS 396 Approval Form</A><p>
@@ -29,6 +30,7 @@ a {
 </blockquote>
 <H3>Horse Barn</H3>
 <blockquote>
+<A HREF=https://robertcausey.github.io/welcome.witter.html>Welcome to the Witter Center.</A> Required paperwork for students in AVS 196, 303, 397 and drill team etc. <p>
 <A HREF=Barn_Manual/barnmanual.htm>Barn Manual</A><p>
 <A HREF=http://f1.weather.gov/MapClick.php?lat=44.88693400000005&lon=-68.6656926#.WbFjWEqGMtU>Orono Weather - check hourly forecast</A><p>
 </blockquote>
