updating safety sites

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ If you are trying to reach me feel free to call or text at 207-922-7475. Email r
 </blockquote>
 <H3>Horse Barn</H3>
 <blockquote>
-<A HREF=https://robertcausey.github.io/welcome.witter.html>Welcome to the Witter Center.</A> Required paperwork for students in AVS 196, 303, 397 and drill team etc. <p>
+<A HREF=https://robertcausey.github.io/welcomewitter.html>Welcome to the Witter Center.</A> Required paperwork for students in AVS 196, 303, 397 and drill team etc. <p>
 <A HREF=Barn_Manual/barnmanual.htm>Barn Manual</A><p>
 <A HREF=http://f1.weather.gov/MapClick.php?lat=44.88693400000005&lon=-68.6656926#.WbFjWEqGMtU>Orono Weather - check hourly forecast</A><p>
 </blockquote>
