--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ a {
 </center>
 -->
 <H3>Resources for advisees</H3>
-If you are trying to reach me feel free to call or text at 207-922-7475. Email rcausey@maine.edu. To schedule as meeting please invite me using your google calendar.
+If you are trying to reach me feel free to call or text me at 207-922-7475. Email rcausey@maine.edu. To schedule a meeting please invite me using your google calendar.
 <blockquote>
 <p>
 <A HREF=advising/AVS396.pdf>AVS 396 Approval Form</A><p>
