--- a/AVS196_303/AVS303_Lecture_Material/902_farmlab_video_archive.htm
+++ b/AVS196_303/AVS303_Lecture_Material/902_farmlab_video_archive.htm
@@ -42,6 +42,20 @@ Below are videos of all aspects of Gator training specific to the horse barn. Th
 <A HREF=https://video.maine.edu/media/10_+JohnDeere_Parking/1_k6mucj3u>10-Parking</A><br>
 </blockquote>
 </blockquote>
+<H3>Cleaning the warmroom</H3><blockquote>
+Below are short videos of how to clean the warm room. The sound in the videos is not great, so read the text description for each video for the key points. Each video is about a minute long.<p>
+<blockquote>
+<A HREF=https://video.maine.edu/media/01_Warmroom_intro/1_hdsr3kv4>01-Introduction</A><br>
+<A HREF=https://video.maine.edu/media/02_Warmroom_clean+tubs+and+clear+area/1_sa8yln4z>02-Clean tubs and clear area</A><br>
+<A HREF=https://video.maine.edu/media/03_Warmroom_Tubs%2C+rocks%2C+clear+area%2C+stay+to+right+of+line%2C+quote+from+Scarface./1_k7bmiuce>03-Tubs, rocks, stay to right of line</A><br>
+<A HREF=https://video.maine.edu/media/04_Warmroom_Hose+to+the+right/1_hyazte2w>04-Hosing</A><br>
+<A HREF=https://video.maine.edu/media/05_Warmroom_clean+walk+way./1_j2h1kx14>05-Cleaning the walk way</A><br>
+<A HREF=https://video.maine.edu/media/06_Warmroom_White+brush+and+cleaning+gutter/1_uzcsedem>06-Cleaning mats and gutter</A><br>
+<A HREF=https://video.maine.edu/media/07_Warmroom_Dumping+waste+hay+etc/1_l4uoeca1>07-Dumping waste hay</A><br>
+<A HREF=https://video.maine.edu/media/08_Warmroom_Rinsing+tools+and+bucket./1_wgnnkchv>08-Rinsing tools and bucket</A><br>
+<A HREF=https://video.maine.edu/media/09_Warmroom_Finishing+up+and+wrapping+the+hose/1_ltqcodx0>09-Finishing up and wrapping the hose</A><br>
+</blockquote>
+</blockquote>
  <H3>Horse Identification</H3><blockquote><A HREF=https://video.maine.edu/media/AVS303_0011_Get_to_know_the_horses/1_x155iiqg>Meet our horses</A><p><A HREF=https://video.maine.edu/media/AVS303-0012_DIVA/1_28dne9ar>and Diva!</A><p> <A HREF=https://video.maine.edu/media/AVS+146+Lab+4+Part+1/1_n1xn84x2>Horse ID, coat color, aging </A>(for AVS 146-part 1)<P><A HREF=https://youtu.be/qGJCbU0Ao04>Horse ID, coat color, aging </A>(for AVS 146 part 2)</A></blockquote>
  <H3>Grooming</H3><blockquote><A HREF=https://video.maine.edu/media/AVS303_0040-Grooming-1/1_0yf5nwwj>Grooming 1</A><p><A HREF=https://video.maine.edu/media/AVS303_0041-Grooming-2/1_y52mer37>Grooming 2</A><p></blockquote>
  <H3>Physical Exam and Body Condition</H3><blockquote><A HREF=xx>Coming soon to a horse near you!</A><p></blockquote>
