AVS303 and 353 video links

--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -26,16 +26,18 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <B>Reproductive Anatomy</B><BR>
 <A HREF=https://video.maine.edu/media/2020-02-24_AVS+353_Lecture_Reproductive_Anatomy_1/1_egc4h0lk>2021-02-24</A> Reproductive Anatomy: Pineal gland, hypothalamus, pituitary, ovaries, uterus, follicle, CL etc.<p>
 <A HREF=https://video.maine.edu/media/2021-03-03_AVS+353_Lecture_Reproductive_Anatomy_2/1_kf39mrc5>2021-03-03</A> Reproductive Anatomy: Counter current exchange mechanism for systemic distribution of prostaglandin, uterine glands, myometrium, cervix, changes with cycle, etc. <p>
-<B>Reproductive Seasonality</B><BR> <p>
+<B>Reproductive Seasonality</B><BR>
+<A HREF=https://video.maine.edu/media/2021-03-10_AVS+353_Lecture_Reproductive_Seasonality/1_5nbijjky>2021-03-10</A> Reproductive Seasonality: a review of imposed breeding seasons and reproductive patterns through the year. Understanding seasonal changes in the mare is the key to making good breeding management decisions. 
 <p>
 <B>Estrous Cycle</B><br>
+<A HREF=https://video.maine.edu/media/2021-03-17_AVS+353_Lecture_Estrous-Cycle/1_vtwahzw2>2021-03-17</A> Estrous Cycle: a review of the changes between estrus and diestrus of equine behavior, ovarian dynamics (follicular growth, ovulation, CL maintenance and luteolysis), gonadotropins (FSH and LH), ovarian steroids (estrogen and progesterone), inhibin, and prostaglandin F 2 alpha. 
 <p>
 <B>Endocrinology of Pregnancy</B><BR>
 <P>
 <B>Pregnancy and Foaling</B><br>
 <p><Blockquote>
 <A HREF=https://video.maine.edu/media/AVS353_0054_11monthsofintrauterineactivity_video-2020-04-15/1_bwtegdyq>Click here</A> to see a video by Dr Ginther on movements of the fetus during pregnancy. (This video is copyrighted and is shown here for students in AVS 353 at the University of Maine.)<p>
-<A HREF=https://video.maine.edu/media/Foaling+video/1_08o6762r>Click here</A> to see a good foaling video<p>
+<A HREF=https://video.maine.edu/media/Foaling+video/1_08o6762r>Click here</A> to see a good foaling video (also copyrighted)<p>
 <A HREF=https://video.maine.edu/media/Movingpoetry/1_iwl2xvm1>Click here</A> to see a foal born at night at the Witter Center<p>
 <A HREF=https://video.maine.edu/media/Foalingchase/1_5730kbre>Click here</A> to see an induced foaling at the Witter Center<p>
 
