How to invite me on google calendar- index.html

--- a/AVS196_303/AVS303_Lecture_Material/901_lecture_video.htm
+++ b/AVS196_303/AVS303_Lecture_Material/901_lecture_video.htm
@@ -14,11 +14,12 @@
 		<H3>Horse Identification </H3> <blockquote>
 			<A HREF=https://video.maine.edu/media/2021_02_01_AVS196-303_Joint-Lecture_Coat-Color/1_okrz77ir>2021-02-01</A> A brief review of safety training and lecture on coat color and horse identification.<p>
 		</blockquote>	<H3>Physical Examination and Body Condition Scoring </H3> <blockquote>
-			<A HREF=https://video.maine.edu/media/2021_03_01_AVS196-303_Joint-Lecture_Physical-Examination/1_2iirh16m>2021-03-01</A>A brief review of physical examination in the horse<p>
+			<A HREF=https://video.maine.edu/media/2021_03_01_AVS196-303_Joint-Lecture_Physical-Examination/1_2iirh16m>2021-03-01</A> A brief review of physical examination in the horse.<p>
 		</blockquote>	<H3>Digestion - Gut anatomy, nutrition and feeding</H3> <blockquote>
-			<!--<A HREF=>Link text</A>--><p>
+			<A HREF=https://video.maine.edu/media/2021_03_08_AVS196-303_Joint-Lecture_body-condition_gut-anatomy_nutrition/1_y7cya9ku>2021-03-08</A> Body condition, gut anatomy, nutrition and feeds.<p>
 		</blockquote>	<H3>Colic and Gut Parasites</H3> <blockquote>
-			<!--<A HREF=>Link text</A>--><p>
+			<A HREF=https://video.maine.edu/media/2021_03_15_AVS196-303_Joint-Lecture_causes+of+colic/1_iv6a6t5r>2021-03-15</A> Risk factors for colic: A review article by Nathaniel White. Bottom line is always give access to water, deworm, and minimize grain.<p>
+			<A HREF=https://video.maine.edu/media/A2021_03_22_AVS196-303_Joint-Lecture_equine+gastro-intestinal+parasites+and+especially+worms/1_qsemt0ib>2021-03-22</A> A brief introduction to worms and dewormers.<p>
 		</blockquote>	<H3>The Environment </H3> <blockquote>
 			<!--<A HREF=>Link text</A>--><p>
 		</blockquote>	<H3>Musculoskeletal System</H3> <blockquote>
