--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ a {
 <BODY bgcolor=GainsBoro>
 <H1><CENTER>Robert Causey - Helpful Links for Students</CENTER></H1>
 <P>
-<div align="right"><I>Updated Wednesday 10th March 2021</I></div>
+<div align="right"><I>Updated Wednesday 25th March 2021</I></div>
 <!--<center>
 <H2> Link to Assignments List for AVS 146 </H2>
 		<A HREF= http://robertcausey.github.io/AVS146/To_Do_List_AVS146.htm> Assignments needed to complete AVS146</A>
@@ -25,6 +25,7 @@ a {
 If you are trying to reach me feel free to call or text me at 207-922-7475. Email rcausey@maine.edu. To schedule a meeting please invite me using your google calendar.
 <blockquote>
 <p>
+<A HREF=https://video.maine.edu/media/How+to+invite+Dr.+Causey+to+an+advising+meeting./1_u70s4uxn>How to invite Dr Causey on Google Calendar</A> to an advising meeting. If you don't want to watch this unscripted and unrehearsed video, just follow the directions in the desciption box. <p>
 <A HREF=advising/AVS396.pdf>AVS 396 Approval Form</A><p>
 <A HREF=http://www.aavmc.org/vmcas/vmcas.htm>VMCAS</A><P>
 </blockquote>
