adding quizzes for AVS353

--- a/AVS353/REPRO.HTM
+++ b/AVS353/REPRO.HTM
@@ -65,10 +65,12 @@ For support services on campus: Office of Sexual Assault & Violence Prevention: 
 <h2><center>Course Materials</center></h2></P>
 </P>
 <P>Review Quizzes</P>
-</B><P><Blockquote>A set of simple questions to test your knowledge of <A HREF=EQUEST.HTM>basic horse reproduction</A>.</P>
-Quiz 1.  Detailed quiz of <A HREF=QUIZ1.HTM>anatomy, seasonality, and estrous cycle.</A>  <P>
-Quiz 2.  Detailed quiz of <A HREF=QUIZ2.HTM>endocrinology of pregnancy.</A>  <P> Quiz 3.  Detailed quiz of <A HREF=QUIZ3.HTM>management of pregnancy and foaling.</A>  <P> Quiz 4.  Detailed quiz of <A HREF=QUIZ4.HTM>stallion anatomy and physiology.</A>  <P> 
-Quiz 5.  Detailed quiz of <A HREF=QUIZ5.HTM>drug use in equine reproduction.</A>  <P>
+</B><P><Blockquote>A set of simple questions to test your knowledge of <A HREF=EQUEST.HTM>basic horse reproduction.</A> </P>
+Quiz 1.  Detailed quiz of <A HREF=https://forms.gle/31WMR4haDMdjxnfh7>anatomy, seasonality, and estrous cycle.</A>  <P>
+Quiz 2.  Detailed quiz of <A HREF=https://forms.gle/b5KYbhy9MaoBMi3Y7>endocrinology of pregnancy.</A>  <P> 
+Quiz 3.  Detailed quiz of <A HREF=https://forms.gle/B6ft3ELjUhu1JkW89>management of pregnancy and foaling.</A>  <P> 
+Quiz 4.  Detailed quiz of <A HREF=https://forms.gle/aP99GpzA3xG3FF1M9>stallion anatomy and physiology.</A>  <P> 
+Quiz 5.  Detailed quiz of <A HREF=https://forms.gle/mjLrGyKRriXP9sTBA>drug use in equine reproduction.</A>  <P>
 </Blockquote>
 <P><B>Aristotle's View of Horse Reproduction</B></P>
 <Blockquote>A translation from The History of Animals Book 6, part 22<P><A HREF=Aristotle_HA_VI_22.htm>click here</A></Blockquote>
