editing quizzes for AVS353

--- a/AVS353/REPRO.HTM
+++ b/AVS353/REPRO.HTM
@@ -28,7 +28,7 @@ a {
 </P>
 </Blockquote>
 <B>Grading:</P>
-</B><Blockquote>Students will be provided 5 take home quizzes.  Students will also be required to write a paper. The format will be an article for suitable for submission to "Equus" magazine on a subject for lay audiences within the field of equine reproduction.  Topics might include "How to manage your mare for breeding" "The Equine Estrous Cycle" or "Pregnancy in the mare" etc. </P>
+</B><Blockquote>Students will be provided 5 take home quizzes.  Students, for an extra credit, may write a paper. The format will be an article for suitable for submission to "Equus" magazine on a subject for lay audiences within the field of equine reproduction.  Topics might include "How to manage your mare for breeding" "The Equine Estrous Cycle" or "Pregnancy in the mare" etc. </P>
 </P>
 Grading will be calculated as follows:</P>
 </P>
@@ -65,7 +65,8 @@ For support services on campus: Office of Sexual Assault & Violence Prevention: 
 <h2><center>Course Materials</center></h2></P>
 </P>
 <P>Review Quizzes</P>
-</B><P><Blockquote>A set of simple questions to test your knowledge of <A HREF=EQUEST.HTM>basic horse reproduction.</A> </P>
+</B><P><Blockquote>An optional set of simple questions to test your knowledge of <A HREF=EQUEST.HTM>basic horse reproduction.</A> </P>
+The following 5 quizzes are required. Theoretically they are due the week after we complete the relevant material, but pragmatically they are due by 5 pm on the Friday of finals week.
 Quiz 1.  Detailed quiz of <A HREF=https://forms.gle/31WMR4haDMdjxnfh7>anatomy, seasonality, and estrous cycle.</A>  <P>
 Quiz 2.  Detailed quiz of <A HREF=https://forms.gle/b5KYbhy9MaoBMi3Y7>endocrinology of pregnancy.</A>  <P> 
 Quiz 3.  Detailed quiz of <A HREF=https://forms.gle/B6ft3ELjUhu1JkW89>management of pregnancy and foaling.</A>  <P> 
