editing quizzes for AVS353

--- a/AVS353/REPRO.HTM
+++ b/AVS353/REPRO.HTM
@@ -66,7 +66,7 @@ For support services on campus: Office of Sexual Assault & Violence Prevention: 
 </P>
 <P>Review Quizzes</P>
 </B><P><Blockquote>An optional set of simple questions to test your knowledge of <A HREF=EQUEST.HTM>basic horse reproduction.</A> </P>
-The following 5 quizzes are required. Theoretically they are due the week after we complete the relevant material, but pragmatically they are due by 5 pm on the Friday of finals week.
+The following 5 quizzes are required. Theoretically they are due the week after we complete the relevant material, but pragmatically they are due by 5 pm on the Friday of finals week.<p>
 Quiz 1.  Detailed quiz of <A HREF=https://forms.gle/31WMR4haDMdjxnfh7>anatomy, seasonality, and estrous cycle.</A>  <P>
 Quiz 2.  Detailed quiz of <A HREF=https://forms.gle/b5KYbhy9MaoBMi3Y7>endocrinology of pregnancy.</A>  <P> 
 Quiz 3.  Detailed quiz of <A HREF=https://forms.gle/B6ft3ELjUhu1JkW89>management of pregnancy and foaling.</A>  <P> 
