--- a/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
+++ b/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
@@ -10,8 +10,9 @@
 	<BODY bgcolor=GainsBoro>
 		<center><H2> Lecture Material and Quizzes - AVS 196/303</H2><H3>Introduction to Equine Cooperative<BR>Equine Management Cooperative</H3>
 			</H2></center>
-		<H3>Course Syllabus</H3><blockquote>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/002_SyllabusAVS303spring2021.pdf>Syllabus</A><p></blockquote>
+		<H3>Course Syllabi</H3><blockquote>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/003_AVS196_syllabus_spring2021.pdf>AVS196 Syllabus</A><p>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/002_SyllabusAVS303spring2021.pdf>AVS303 Syllabus</A><p></blockquote>
 		<H3>First things to do and welcome to the Witter Center</H3><blockquote>
 If you haven't yet done so, please complete the necessary paperwork at <A HREF=https://robertcausey.github.io/welcomewitter.html>Welcome to the Witter Center</A>
 		</blockquote>
