--- a/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
+++ b/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
@@ -20,7 +20,7 @@ If you haven't yet done so, please complete the necessary paperwork at <A HREF=h
 			<blockquote>
 				<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/901_lecture_video.htm>Recordings of lectures</A><P>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/902_farmlab_video_archive.htm>Videos of farm and lab material</A></blockquote>
-		<center><H2>Lecture Topics</H2></center>
+		<center><H2>Lecture Topics and Lecture Quizzes</H2></center>
 			<H3>Horse Identification </H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/034_Basic_Colors_Markings.pdf>Coat Color and Markings</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/034_Horse_ID.pdf>Horse ID chart</A><p>
@@ -50,7 +50,8 @@ If you haven't yet done so, please complete the necessary paperwork at <A HREF=h
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/060_Winter_Horse_Care.pdf>Winter Care of Horses</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/061_7-Day_Forecast.pdf>Sample 7 day forecast</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/062_Hourly_Forecast.pdf>Sample Hourly Forecast</A><p>
-		</blockquote>	<H3>Musculoskeletal System</H3> <blockquote>
+<center><A HREF=https://forms.gle/mUTdu8HeibNLdoTM6><B>Lecture Quiz 1</A> <BR>Integument, Endocrine, Digestive tract, Environment</B><br>This quiz is required for AVS 196 and 303. Theoretically it is due the week after we complete the relevant material, but pragmatically it is due by 5 pm on the Friday of finals week.</center>		
+</blockquote>	<H3>Musculoskeletal System</H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/081_apartsofhorse1.pdf>Parts of the horse we should know</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/081_cg_partsofhorse.pdf>Excerpt from 4h horse manual</A> <p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/081_partsofhorse2.pdf>More difficult parts of the horse</A><p>
@@ -62,6 +63,7 @@ If you haven't yet done so, please complete the necessary paperwork at <A HREF=h
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/084_Lamenessexam.xlsx.pdf>Practice sheet for lameness exams</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/086_Lameness_Therapy.pptx.pdf>Principles of therapy for lameness</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/086_bandaging_pptx_optimized.pdf>How to bandage the lower legs</A><p>
+<center><A HREF=https://forms.gle/6NexpzXxjPMauUC87><B>Lecture Quiz 2</A> <BR>Points of the horse, anatomy, lameness examination and gaits.</B><br>This quiz is required for AVS 196 and 303. Theoretically it is due the week after we complete the relevant material, but pragmatically it is due by 5 pm on the Friday of finals week.</center>		
 		</blockquote>	<H3>Infectious Diseases</H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/090_Miscellaneous_1_Bacterial_Diseases.pdf>Various Bacterial Diseases</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/090_Diarrhea_1_Salmonellosis.pdf>Salmonella Infections in Horses.</A><p>
@@ -73,6 +75,7 @@ If you haven't yet done so, please complete the necessary paperwork at <A HREF=h
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/090_Respiratory_3_Equine_Viral_Arteritis.pdf>Equine Viral Arteritis (EVA)</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/101_vaccinationguidelines.pdf>Vaccination Guide Lines</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/100_infectious_diseases.pdf>Review Questions on Infectious Diseases</A><p>
+<center><A HREF=https://forms.gle/ejXuLkjfTGjKjpti7><B>Lecture Quiz 3</A> <BR>Lameness therapy, infectious diseases and vaccinations. </B><br>This quiz is required for AVS 196 and 303. Theoretically it is due the week after we complete the relevant material, but pragmatically it is due by 5 pm on the Friday of finals week.</center>		
 		</blockquote>	<H3>Self-Assessment</H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/200_skillsassessment.xlsx.pdf>Checklist of Skills you should accomplish.</A><p>
 		</blockquote>
