Update avs353 and 303

--- a/AVS196_303/AVS303_Lecture_Material/901_lecture_video.htm
+++ b/AVS196_303/AVS303_Lecture_Material/901_lecture_video.htm
@@ -21,7 +21,7 @@
 			<A HREF=https://video.maine.edu/media/2021_03_15_AVS196-303_Joint-Lecture_causes+of+colic/1_iv6a6t5r>2021-03-15</A> Risk factors for colic: A review article by Nathaniel White. Bottom line is always give access to water, deworm, and minimize grain.<p>
 			<A HREF=https://video.maine.edu/media/A2021_03_22_AVS196-303_Joint-Lecture_equine+gastro-intestinal+parasites+and+especially+worms/1_qsemt0ib>2021-03-22</A> A brief introduction to worms and dewormers.<p>
 		</blockquote>	<H3>The Environment </H3> <blockquote>
-			<!--<A HREF=>Link text</A>--><p>
+			<A HREF=https://video.maine.edu/media/2021_03_29_AVS196-303_Joint-Lecture_The+environment/1_76eojios>2021-03-29</A> Understanding and managing how the natural environment (weather, temperature, plants, manure, etc) <p>
 		</blockquote>	<H3>Musculoskeletal System</H3> <blockquote>
 			<!--<A HREF=>Link text</A>--><p>
 		</blockquote>	<H3>Lameness</H3> <blockquote>
