--- a/AVS353/video_archive_AVS353.htm
+++ b/AVS353/video_archive_AVS353.htm
@@ -33,6 +33,7 @@ The purpose of this page is to provide links to videos of lectures and  movies u
 <A HREF=https://video.maine.edu/media/2021-03-17_AVS+353_Lecture_Estrous-Cycle/1_vtwahzw2>2021-03-17</A> Estrous Cycle: a review of the changes between estrus and diestrus of equine behavior, ovarian dynamics (follicular growth, ovulation, CL maintenance and luteolysis), gonadotropins (FSH and LH), ovarian steroids (estrogen and progesterone), inhibin, and prostaglandin F 2 alpha. 
 <p>
 <B>Endocrinology of Pregnancy</B><BR>
+<A HREF=https://video.maine.edu/media/2021-03-31_AVS+353_Lecture_Endocrinology_of_pregnancy/1_uiylp0pk>2021-03-31</A> Endocrinology of Pregnancy. The three luteal responses, the role of progestogens and estrogens from the ovary and fetoplacental unit (fetal gonads and placenta) in supporting pregnancy. Appearance of equine chorionic gonadotropin to drive second and third luteal responses. 
 <P>
 <B>Pregnancy and Foaling</B><br>
 <p><Blockquote>
